Removed perfectScrollbar usage in forms browse view. This solves the annoying auto-scroll to top and bottom bug, but it means that non-Mac OS users may have an ugly scrollbar; it may also have resulted in the scrollbar not being visible when it is needed (cannot tell if this is a Mac OS X "feature" or a bug).

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -44,10 +44,13 @@ div#mainmenu
 
 #dative-page-body
 {
-    margin: 10px;
-    overflow-y: hidden;
-    overflow-x: visible !important;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    overflow-y: auto;
+    overflow-x: auto;
+    height: 100%;
     position: relative;
+    width: 100%
 }
 
 .ui-widget {
